Revision history for Test-Run-Plugin-ColorFileVerdicts

0.0120    Thu Aug  6 13:45:46 IDT 2009
        * Converted to Moose and to Test-Run-Core/Test-Run-CmdLine 0.0120.

0.0106    Mon May  4 21:06:10 IDT 2009
        * Converted from NEXT.pm to MRO::Compat.

0.0105    Tue Aug 19 22:34:31 IDT 2008
        * Converted to private_backend_plugins().
        * Bumped the dependency to the latest Test-Run-CmdLine.

0.0104    Mon Aug 18 20:26:07 IDT 2008
        * Changed _initialize() to _init().
            - In accordance to the new Test-Run.
        * Bumped the dependencies.
        * Changed the licence to "mit" instead of "bsd".

0.0103    Sat Jun 23 17:18:31 IDT 2007
        * Simplified the CanonFailedObj plugin-specifying code based on the
        new development of Test::Run::Base.
        * Converted the tests to use the Test::Trap-based classes.

0.0102    Tue Jun 12 19:29:22 IDT 2007
        * Fixed a class-inheritance-graph problem in which the plugin
        inherited from Test::Run::Core and caused the functions of the
        plugins following it to be referenced directly from Test::Run::Core.
        * Note: instead of inheriting from Class::Accessor inherit from
        Test::Run::Base which defines ->new properly.

0.0101  Mon Jun 11 15:19:38 IDT 2007
        * Converted from Test::Trap to Test::Run::Trap::Obj.
        * Extracted the Test::Run::Plugin::ColorFileVerdicts::ColorBase class.
        * Converted to private_non_direct_backend_env_mapping
        * Adapted to the new Test::Run semantics by creating:
            Test::Run::Plugin::ColorFileVerdicts::CanonFailedObj

0.01    Mon Mar 19 16:23:12 IST 2007
        First version, released on an unsuspecting world.